# search_for_nearby_cars

./: .dockerignore  .env_example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  celerybeat-schedule.db  docker-compose.yaml  entrypoint.sh  pyproject.toml  pytest.ini  requirements.txt
apps/car/: admin.py  dao_car.py  models.py  serializers.py  tasks.py  urls.py  views.py
apps/car/migrations/: 0001_initial.py  0002_alter_carmodel_now_location.py  0003_alter_carmodel_now_location.py  0004_alter_carmodel_now_location.py  0005_alter_carmodel_now_location.py
apps/cargo/: admin.py  dao.py  dao_cargo.py  filters.py  models.py  serializers.py  services.py  urls.py  views.py
apps/cargo/migrations/: 0001_initial.py
apps/location/: admin.py  dao_location.py  models.py
apps/location/migrations/: 0001_initial.py
config/: celery.py  settings.py  urls.py
nginx_conf/: nginx.conf  nginx_site.conf
tests/: conftest.py  factories.py  test_car.py  test_cargo.py
utils/: gen_coordinates.py  gen_number_car.py  lte_postgres.py
validators/: number_car_validator.py
